@@ -16,7 +16,7 @@
 					<!--                    <release>16</release>-->
 					<fork>true</fork>
 					<compilerArgs>
-						<arg>--enable-preview</arg>
+						
 						<arg>-Xlint:all</arg>
 						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
 						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
